finished swagger for appointment, auth, chat, profile
