# backend/docs/swagger.json
@@ -75,7 +75,7 @@
         },
         "/api/fortune168/v1/confirm_email/{key}": {
             "post": {
-                "description": "send the key from confirmation email to activate",
+                "description": "Send the key from confirmation email to activate",
                 "consumes": [
                     "application/json"
                 ],
@@ -85,7 +85,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "use the key in the confirmation email to activate",
+                "summary": "Use the key in the confirmation email to activate",
                 "operationId": "ActivateEmailHandler",
                 "parameters": [
                     {
@@ -175,7 +175,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "customer registeration and send confirmation email",
+                "summary": "Customer registeration and send confirmation email",
                 "operationId": "CustomerRegisterHandler",
                 "parameters": [
                     {
@@ -244,7 +244,7 @@
         },
         "/api/fortune168/v1/delete_account": {
             "post": {
-                "description": "just send the request to delete account. Note that this is a hard delete, no way to recover account later.",
+                "description": "Just send the request to delete account. Note that this is a hard delete, no way to recover account later.",
                 "consumes": [
                     "application/json"
                 ],
@@ -260,7 +260,7 @@
                     {
                         "type": "string",
                         "default": "Bearer \u003cAdd access token here\u003e",
-                        "description": "Send token if log-in, to check authority to send message",
+                        "description": "Send token if log-in, to check authority to delete account",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -589,7 +589,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "provider registeration and send confirmation email",
+                "summary": "Provider registeration and send confirmation email",
                 "operationId": "ProviderRegisterHandler",
                 "parameters": [
                     {
@@ -790,6 +790,33 @@
                     },
                     "500": {
                         "description": "error message",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/fortune168/v1/test": {
+            "get": {
+                "description": "Dummy function for testing, will return the time at midnigth of 2014-05-22",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Dummy function, will return the time at midnigth of 2014-05-22",
+                "operationId": "TestHandler",
+                "responses": {
+                    "200": {
+                        "description": "2014-05-22T00:00:00Z",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "should not happened?",
                         "schema": {
                             "type": "string"
                         }
